--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,6 +1,6 @@
 spring.application.name=javaproject03
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://serverip:port/usingdb?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=dbid
-spring.datasource.password=dbpw
+spring.datasource.url=jdbc:mysql://{serverip}:{port}/usingdb?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username={dbid}
+spring.datasource.password={dbpw}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
